--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -150,7 +150,7 @@ body {
   border-radius: 0.2em;
   background: #fff;
   box-shadow: 5px 5px 8px 0px rgba(140, 140, 140, 0.2);
-  margin-bottom: 1em;
+  margin: -16px 0 24px 0;
   animation: fade 0.25s ease-in-out;
 }
 @media (min-width: 300px) and (max-width: 599px) {
@@ -199,6 +199,10 @@ body {
   background-size: cover;
 }
 
+.hero-title-wrapper {
+  margin: 0 200px;
+}
+
 .hero {
   color: #ebebeb;
   text-align: center;
@@ -217,8 +221,7 @@ body {
 }
 .hero__subtitle {
   font-size: 1.6rem;
-  color: #aaaaaa;
-  letter-spacing: 0.3rem;
+  color: #fff;
   margin-top: -0.1em;
 }
 @media (min-width: 300px) and (max-width: 599px) {
@@ -385,11 +388,11 @@ select:hover, select:focus,
 }
 .booking__title {
   font-family: "Orelega One", cursive;
-  font-size: clamp(1rem, 10vw, 3.5rem);
+  font-size: clamp(1rem, 10vw, 3.052rem);
+  margin: 0;
 }
 .booking__content {
   font-size: clamp(1rem, 3vw, 1.5rem);
-  margin-bottom: 1.5em;
 }
 
 .footer-container {
@@ -592,8 +595,9 @@ header .logo {
   line-height: 6rem;
   font-size: clamp(1.2rem, 9vw, 3rem);
   margin-top: 1.5em;
+  font-size: clamp(1.2rem, 9vw, 3.052rem);
   color: #1e1e1e;
-  margin: 1em 0 -0.4em 0;
+  margin: 88px 0 -0.4em 0;
 }
 
 .navmenu__list {
