--- a/src/sass/layout/_booking.scss
+++ b/src/sass/layout/_booking.scss
@@ -20,11 +20,13 @@
     &__title {
 
         font-family: h.$cursive;
-        font-size: clamp(1rem, 10vw, 3.5rem);
+        font-size: clamp(1rem, 10vw, 3.052rem);
+        margin: 0;
+
     }
 
     &__content {
         font-size: clamp(1rem, 3vw, 1.5rem);
-        margin-bottom: 1.5em;
+        // margin-bottom: 1.5em;
     }
 }
